bpo-31849: Fix warning in pyhash.c (GH-6799)